--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "djangorestframework==3.15.1",
     "docutils==0.16",
     "jmespath==1.0.1",
+    "mongoose>=0.0.1",
     "pillow==10.4.0",
     "pyasn1==0.6.1",
     "pyjwt==2.8.0",
