--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,23 @@ name = "blogapi"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9.20"
+requires-python = ">=3.12"
+license = { file = "LICENSE" }
+authors = [
+    { name = "Tomislav Dukez", email = "tomdu3@ymail.com" }, 
+]
+keywords = ["django", "blog", "api"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Framework :: Django",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+]
 dependencies = [
     "asgiref==3.8.1",
     "awscli==1.33.4",
-    "backports-zoneinfo==0.2.1",
     "boto3==1.34.103",
     "botocore==1.34.122",
     "colorama==0.4.6",
@@ -19,10 +31,10 @@ dependencies = [
     "djangorestframework==3.15.1",
     "docutils==0.16",
     "jmespath==1.0.1",
-    "mongoose>=0.0.1",
     "pillow==10.4.0",
     "pyasn1==0.6.1",
     "pyjwt==2.8.0",
+    "pymongo>=4.11.3",
     "python-dateutil==2.9.0.post0",
     "python-decouple==3.8",
     "pyyaml==6.0.2",
