--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 asgiref==3.8.1
 awscli==1.33.4
-backports-zoneinfo==0.2.1
 boto3==1.34.103
 botocore==1.34.122
 colorama==0.4.6
@@ -10,12 +9,13 @@ django-filter==24.2
 django-s3-sqlite==0.0.5
 django-storages==1.14.4
 djangorestframework==3.15.1
+dnspython==2.7.0
 docutils==0.16
 jmespath==1.0.1
-mongoose==0.0.1
 pillow==10.4.0
 pyasn1==0.6.1
 pyjwt==2.8.0
+pymongo==4.11.3
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pyyaml==6.0.2
